--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -44,7 +44,20 @@ paths:
                 items:
                   $ref: '../base/product-base.yml#/components/schemas/Product'
                 minItems: 0
-          
+        
+        
+        '400':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '403':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '500':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        'default':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
     post:
       operationId: createProduct
       requestBody:
@@ -64,13 +77,39 @@ paths:
               schema:
                 type: boolean
                 example: 'true'
-          
+        
+        
+        '400':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '403':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '500':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        'default':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
     head:
       operationId: ping
       responses:
         '200':
           description: Operation does not return any content.
-          
+        
+        
+        '400':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '403':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '500':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        'default':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
   /products/{id}:
     get:
       operationId: getProduct
@@ -91,7 +130,20 @@ paths:
             application/json:
               schema:
                 $ref: '../base/product-base.yml#/components/schemas/Product'
-          
+        
+        
+        '400':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '403':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '500':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        'default':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
   /products/sortiment/{id}:
     get:
       operationId: getSortiment
@@ -142,7 +194,20 @@ paths:
             application/json:
               schema:
                 $ref: '../base/product-base.yml#/components/schemas/Sortiment'
-          
+        
+        
+        '400':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '403':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '500':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        'default':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
   /products/ChannelCode:
     post:
       operationId: createChannelCode
@@ -167,7 +232,20 @@ paths:
             application/json:
               schema:
                 $ref: '../base/product-base.yml#/components/schemas/ChannelCode'
-          
+        
+        
+        '400':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '403':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '500':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        'default':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
   /products/deprecated/operation:
     get:
       operationId: deprecatedOperation
@@ -180,7 +258,20 @@ paths:
             application/json:
               schema:
                 type: string
-          
+        
+        
+        '400':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '403':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '500':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        'default':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
   /products/deprecated/context:
     post:
       operationId: deprecatedContext
@@ -223,7 +314,20 @@ paths:
             application/json:
               schema:
                 type: string
-          
+        
+        
+        '400':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '403':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '500':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        'default':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
   /products/deprecated/beanParams:
     post:
       operationId: deprecatedBeanParam
@@ -253,7 +357,20 @@ paths:
       responses:
         '200':
           description: Operation does not return any content.
-          
+        
+        
+        '400':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '403':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '500':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        'default':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
   /products/deprecated/params:
     post:
       operationId: deprecatedParams
@@ -276,7 +393,20 @@ paths:
               schema:
                 type: string
                 deprecated: true
-          
+        
+        
+        '400':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '403':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '500':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        'default':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
   /products/deprecated/body:
     post:
       operationId: deprecatedBody
@@ -301,7 +431,20 @@ paths:
             application/json:
               schema:
                 type: string
-          
+        
+        
+        '400':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '403':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '500':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        'default':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
   /products/deprecated/complexBody:
     post:
       description: >-
@@ -322,7 +465,20 @@ paths:
       responses:
         '200':
           description: Operation does not return any content.
-          
+        
+        
+        '400':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '403':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '500':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        'default':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
   /products/deprecated/complexReturn:
     get:
       operationId: deprecatedComplexReturn
@@ -335,7 +491,20 @@ paths:
             application/json:
               schema:
                 $ref: '../base/product-base.yml#/components/schemas/Product'
-          
+        
+        
+        '400':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '403':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '500':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        'default':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
   /products/specific/{id}:
     patch:
       operationId: loadSpecificThings
@@ -388,10 +557,24 @@ paths:
       responses:
         '200':
           description: Operation does not return any content.
-          
+        
+        
+        '400':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '403':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        '500':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
+        'default':
+          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
+        
 
 
 components:
+
   schemas:
     # com.anaptecs.jeaf.junit.openapi.service1.Sale
     Sale:
