JEAF-3050 Added support for OpenAPI spec custom error responses

--- a/jeaf-generator-test-open-api/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/products/product-services.yml
@@ -44,20 +44,10 @@ paths:
                 items:
                   $ref: '../base/product-base.yml#/components/schemas/Product'
                 minItems: 0
-        
-        
         '400':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '403':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '500':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
         'default':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
     post:
       operationId: createProduct
       requestBody:
@@ -77,39 +67,19 @@ paths:
               schema:
                 type: boolean
                 example: 'true'
-        
-        
         '400':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '403':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '500':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
         'default':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
     head:
       operationId: ping
       responses:
         '200':
           description: Operation does not return any content.
-        
-        
         '400':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '403':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '500':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
         'default':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
   /products/{id}:
     get:
       operationId: getProduct
@@ -130,20 +100,10 @@ paths:
             application/json:
               schema:
                 $ref: '../base/product-base.yml#/components/schemas/Product'
-        
-        
         '400':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '403':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '500':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
         'default':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
   /products/sortiment/{id}:
     get:
       operationId: getSortiment
@@ -194,20 +154,10 @@ paths:
             application/json:
               schema:
                 $ref: '../base/product-base.yml#/components/schemas/Sortiment'
-        
-        
         '400':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '403':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '500':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
         'default':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
   /products/ChannelCode:
     post:
       operationId: createChannelCode
@@ -232,20 +182,10 @@ paths:
             application/json:
               schema:
                 $ref: '../base/product-base.yml#/components/schemas/ChannelCode'
-        
-        
         '400':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '403':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '500':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
         'default':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
   /products/deprecated/operation:
     get:
       operationId: deprecatedOperation
@@ -258,20 +198,10 @@ paths:
             application/json:
               schema:
                 type: string
-        
-        
         '400':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '403':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '500':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
         'default':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
   /products/deprecated/context:
     post:
       operationId: deprecatedContext
@@ -314,20 +244,10 @@ paths:
             application/json:
               schema:
                 type: string
-        
-        
         '400':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '403':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '500':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
         'default':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
   /products/deprecated/beanParams:
     post:
       operationId: deprecatedBeanParam
@@ -357,20 +277,10 @@ paths:
       responses:
         '200':
           description: Operation does not return any content.
-        
-        
         '400':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '403':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '500':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
         'default':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
   /products/deprecated/params:
     post:
       operationId: deprecatedParams
@@ -393,20 +303,10 @@ paths:
               schema:
                 type: string
                 deprecated: true
-        
-        
         '400':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '403':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '500':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
         'default':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
   /products/deprecated/body:
     post:
       operationId: deprecatedBody
@@ -431,20 +331,10 @@ paths:
             application/json:
               schema:
                 type: string
-        
-        
         '400':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '403':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '500':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
         'default':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
   /products/deprecated/complexBody:
     post:
       description: >-
@@ -465,20 +355,10 @@ paths:
       responses:
         '200':
           description: Operation does not return any content.
-        
-        
         '400':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '403':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '500':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
         'default':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
   /products/deprecated/complexReturn:
     get:
       operationId: deprecatedComplexReturn
@@ -491,20 +371,10 @@ paths:
             application/json:
               schema:
                 $ref: '../base/product-base.yml#/components/schemas/Product'
-        
-        
         '400':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '403':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '500':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
         'default':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
   /products/specific/{id}:
     patch:
       operationId: loadSpecificThings
@@ -557,23 +427,22 @@ paths:
       responses:
         '200':
           description: Operation does not return any content.
-        
-        
         '400':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '403':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
-        '500':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
         'default':
-          $ref: '../base/product-base.yml#/components/responses/ErrorResponse'
-        
+          $ref: '#/components/responses/CustomErrorResponse'
 
 
 components:
+  responses:
+    # com.anaptecs.jeaf.junit.openapi.service1.CustomErrorResponse
+    CustomErrorResponse:
+      description: TODO Please add comment to error response type
+      content:
+        text/plain:
+          schema:
+            $ref: '../base/product-base.yml#/components/schemas/Problem'
+
 
   schemas:
     # com.anaptecs.jeaf.junit.openapi.service1.Sale
