JEAF-3055 Added support for data types as arrays

--- a/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
@@ -157,6 +157,12 @@ components:
           minItems: 7
           maxItems: 42
           example: 'CHF'
+        productCodes: 
+          type: array
+          items:
+            type: integer
+            format: int32
+          minItems: 1
       required:
         - image
     # com.anaptecs.jeaf.junit.openapi.base.Sortiment
