--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
@@ -72,13 +72,16 @@ components:
           format: double
           nullable: false
           readOnly: true
-        currency: 
+        currencyCode: 
+          description: >-
+            ISO 4217 currency code.
           type: string
-          nullable: false
-          readOnly: true
+          minLength: 3
+          maxLength: 3
+          example: 'CHF'
       required:
         - amount
-        - currency
+        - currencyCode
     # com.anaptecs.jeaf.junit.openapi.base.Channel
     Channel:
       type: object
@@ -145,6 +148,21 @@ components:
         productID: 
           type: string
           readOnly: true
+        supportedCurrencies: 
+          description: >-
+            ISO 4217 currency code.
+          type: array
+          items:
+            type: string
+          minItems: 7
+          maxItems: 42
+          example: 'CHF'
+        productCodes: 
+          type: array
+          items:
+            type: integer
+            format: int32
+          minItems: 1
       required:
         - image
     # com.anaptecs.jeaf.junit.openapi.base.Sortiment
@@ -680,7 +698,7 @@ components:
           items:
             type: integer
             format: int32
-          maxLength: 32768
+          maxItems: 32768
         bByteArray: 
           type: array
           items:
@@ -750,8 +768,8 @@ components:
           items:
             type: number
             format: double
-          minLength: 4
-          maxLength: 12
+          minItems: 4
+          maxItems: 12
         bDoubleArray: 
           type: array
           items:
